

#Clase de Acceso
class accessSensor():
    pass