
#Clase para ser escalable
class SENSOR_REGISTRY:
    pass