
#Clase de Sensor de Temperatura
class TemperatureSensor:
    pass